Fix category list alignment

--- a/src/modules/popouts/_emoji_picker.scss
+++ b/src/modules/popouts/_emoji_picker.scss
@@ -109,7 +109,7 @@
     // Emoji
     // Sidebar
     .categoryList-2qRrlj{
-        top: 52px;
+        top: 44px;
         background-color: $SolidBackgroundFillColorBase;
     }
     // Replace emoji icons
@@ -177,7 +177,7 @@
     .wrapper-1NNaWG{
         margin: 0 -8px;
         padding: 0 16px;
-        background-color: $SolidBackgroundFillColorTertiary;
+        background-color: $Green;
         border-radius: 4px;
         .headerLabel-1g790w{
             @include TypeBodyStrong;
